--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,12 +6,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music Player</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 </head>
 
 <body>
     <audio id="now_playing" src=""></audio>
-    <p id="hah"></p>
+    <p id="json"></p>
+    <div id="container">
+        <div id="folders" class="shadowed">
+            <h1>All folders</h1>
+        </div>
+        <div id="files" class="shadowed">
+            <h1>All files</h1>
+        </div>
+    </div>
+
 </body>
 <script src="./script.js"></script>
 
 </html>
+
+<style>
+    #container{
+        position: absolute;
+        display: flex;
+        width: fit-content;
+    }
+
+    .shadowed{
+        width: 400px;
+        height: 100%;
+        border-radius: 10px;
+        box-shadow: 0px 0px 5px rgb(122, 122, 122);
+        margin: 10px;
+        text-align: center;
+    }
+
+    .shadowed > div {
+        background-color: rgb(0, 20, 77);
+        border-radius: 10px;
+        height: 40px;
+        width: auto;
+        margin: 5px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: aliceblue;
+    }
+
+</style>
