first audio playback

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,13 +20,13 @@
             <h1>All files</h1>
         </div>
     </div>
-    <audio controls autoplay>
+    <!-- <audio controls autoplay>
         <source src="" type="audio/flac">
     </audio>
     <audio controls autoplay>
         <source src="file:///home/cwilvx/Music/Soundtrack%20to%2020/David%20Gates%20-%20He%20Don't%20Know%20How%20to%20Love%20You.flac" type="audio/flac">
       Your browser does not support the audio element.
-      </audio>
+      </audio> -->
 </body>
 <script src="./script.js"></script>
 
